--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -2959,27 +2959,14 @@ ${waypointsYamlStr}
                 robotList.appendChild(li);
             });
 
-                // 팝업 창 스타일 수정 (너비 최대)
-                robotListPopup.style = `
-                    display: block;
-                    width: 100%; /* 너비를 화면 최대 */
-                    height: auto;
-                    max-height: 90vh; /* 화면 높이를 넘지 않도록 제한 */
-                    overflow-y: auto; /* 스크롤 가능 */
-                    padding: 20px;
-                    background-color: white;
-                    border: 1px solid #ddd;
-                    border-radius: 10px;
-                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                    position: fixed;
-                    top: 10%;
-                    left: 0;
-                    z-index: 1000;
-                `;
-            
-
             // 팝업 보이기
             robotListPopup.style.display = 'block';
+
+            // 팝업이 화면 크기에 맞게 조정되도록 설정
+            const popupWidth = Math.min(window.innerWidth * 0.9, 600); // 최대 너비 600px
+            const popupHeight = Math.min(window.innerHeight * 0.8, 600); // 최대 높이 80%
+            robotListPopup.style.width = `${popupWidth}px`;
+            robotListPopup.style.height = `${popupHeight}px`;
         }
 
         // Robot Name 조회 함수
