--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -3014,7 +3014,7 @@ ${waypointsYamlStr}
             // 드롭다운에 로봇 추가
             const option = document.createElement('option');
             option.value = robotId;
-            option.textContent = `Robot Name: ${name} (${robotId}) / Connection ID: ${connectionId}`;
+            option.textContent = `${name} (${robotId})`;
             dropdown.appendChild(option);
 
             // 팝업 닫기
