--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1002,7 +1002,7 @@
         
         // WebSocket 데이터 관리
         let newRobotData = [];
-        let mqtt_data = [];  // AMR 연결 데이터
+        let mqtt_data = [];  
 
 
         // WebSocket 연결 설정
@@ -1034,8 +1034,18 @@
 
                         console.log("New Robot Data:", newRobotData);  
                     };
-                    if (message.mqtt_data) {
-                        mqtt_data = message.mqtt_data;
+                    if (message.mqtt_data && Array.isArray(message.mqtt_data)) {
+                        const incomingData = message.mqtt_data;
+                        
+                        // 기존 mqtt_data 배열 업데이트
+                        const existingIndex = mqtt_data.findIndex(data => data.topic_id === incomingData.topic_id);
+                        if (existingIndex !== -1) {
+                            // 기존 데이터 업데이트
+                            mqtt_data[existingIndex] = incomingData;
+                        } else {
+                            // 새로운 데이터 추가
+                            mqtt_data.push(incomingData);
+                        }
                     }
                 } catch (error){
                     console.error("Error parsing message:", error);
