--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1034,7 +1034,7 @@
 
                         console.log("New Robot Data:", newRobotData);  
                     };
-                    if (message.mqtt_data && Array.isArray(message.mqtt_data)) {
+                    if (message.mqtt_data) {
                         const incomingData = message.mqtt_data;
 
                         // 기존 mqtt_data 배열 업데이트
