map tile update

--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1104,13 +1104,21 @@
 
         let map; // 전역 변수로 선언
 
-        function initializeMap() {
+        function initializeMap(initialMapType = 'site') {
+            const tileUrls = {
+                site: 'https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png',
+                robot: 'https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}'
+            };
+
+            // 선택된 맵 타입에 따른 타일 URL 설정
+            const selectedUrl = tileUrls[initialMapType];
+
             // Leaflet 맵 초기화
             map = L.map('map').setView([34.9682601, 127.4821126], 17); // 서울 중심 좌표
             // OpenStreetMap 타일을 추가하여 지도에 표시
-            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            L.tileLayer(selectedUrl, {
                 maxZoom: 19,
-                attribution: '© OpenStreetMap'
+                attribution: '© OpenStreetMap <a href="https://main.d32zil74wpx5uc.amplifyapp.com/">ZETA</a>'
             }).addTo(map);
             robotLayer = L.layerGroup().addTo(map); // WebSocket을 통해 실시간 위치를 표시할 Layer
         }
