--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -815,7 +815,7 @@
         <label>[Robot Control] </label>
         <button onclick="openRobotListPopup()">Open Robot List</button>
         <!-- 선택된 로봇을 표시할 드롭다운 -->
-        <select id="selectedRobotDropdown">
+        <select id="selectedRobotDropdown" onchange="handleRobotSelectionChange()" style="width: 100%; padding: 5px;">
             <option value="">Selected a Robot</option>
         </select>
         <button onclick="toggleControlMode()">Control Mode</button>
@@ -3027,8 +3027,35 @@ ${waypointsYamlStr}
             }
         }
 
+        function handleRobotSelectionChange() {
+            const dropdown = document.getElementById('selectedRobotDropdown');
+            const selectedRobotId = dropdown.value;
+
+            // mqtt_data에서 로봇 데이터 찾기
+            const selectedRobotData = mqtt_data.find(data => data.topic_id === selectedRobotId);
+
+            if (!selectedRobotData || !selectedRobotData.data) {
+                alert('Unable to find data for the selected robot.');
+                return;
+            }
+
+            // 로봇 위치 데이터 가져오기
+            const latitude = parseFloat(selectedRobotData.data.fix_filtered_latitude) || 0;
+            const longitude = parseFloat(selectedRobotData.data.fix_filtered_longitude) || 0;
+            
+
+            if (latitude === 0 && longitude === 0) {
+                alert('Invalid location data for the selected robot.');
+                return;
+            }
+
+            // 지도 업데이트
+            updateMap(latitude, longitude, selectedRobotId);
+        }
+
         function selectRobot(name, robotId, connectionId) {
             const dropdown = document.getElementById('selectedRobotDropdown');
+            const selectedRobotId = dropdown.value;
 
             // 중복 추가 방지
             const exists = Array.from(dropdown.options).some(option => option.value === robotId);
