--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -815,7 +815,7 @@
         <label>[Robot Control] </label>
         <button onclick="openRobotListPopup()">Open Robot List</button>
         <!-- 선택된 로봇을 표시할 드롭다운 -->
-        <select id="selectedRobotDropdown" onchange="handleRobotSelectionChange()" style="width: 100%; padding: 5px;">
+        <select id="selectedRobotDropdown" onchange="handleRobotSelectionChange()" >
             <option value="">Selected a Robot</option>
         </select>
         <button onclick="toggleControlMode()">Control Mode</button>
