Path list popup

--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -941,7 +941,7 @@
     <!-- 새로운 DB Data 섹션 -->
     <div id="db-data-section">
         <label>[DB Data]</label>
-        <button onclick="openDBRobotPopup()"> DB Waypoint List </button>
+        <button onclick="openPathListPopup(selectedRobotId)"> DB Waypoint List </button>
         <button id="startNavigationBtn" onclick="startNavigation(selectedPathId)">Start Navigation</button>
         <button id="reverseNavigationBtn" onclick="startReverseNavigation(selectedPathId)">Reverse Waypoint</button>
     </div>
